--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -117,6 +117,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="6dp"
                     android:drawablePadding="8dp"
+                    android:gravity="center_vertical"
                     android:textColor="@color/color_9BB3D9_535D76"
                     android:textSize="@dimen/textSize14sp"
                     app:drawableStartCompat="@drawable/ic_detail_odd_title_line"
@@ -196,7 +197,8 @@
                     android:layout_height="wrap_content"
                     android:paddingHorizontal="@dimen/margin_8"
                     android:paddingTop="9dp"
-                    app:layout_constraintBottom_toTopOf="@id/ll_single_tips"
+                    android:paddingBottom="9dp"
+                    app:layout_constraintBottom_toTopOf="@id/llKeyboardContainer"
                     tools:visibility="visible">
 
                     <androidx.constraintlayout.widget.Guideline
@@ -279,58 +281,58 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <!--region 提示文字 -->
-                <LinearLayout
-                    android:id="@+id/ll_single_tips"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="6dp"
-                    android:orientation="vertical"
-                    app:layout_constraintBottom_toTopOf="@id/llKeyboardContainer"
-                    tools:visibility="gone">
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/ll_single_tips"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginBottom="6dp"-->
+<!--                    android:orientation="vertical"-->
+<!--                    app:layout_constraintBottom_toTopOf="@id/llKeyboardContainer"-->
+<!--                    tools:visibility="gone">-->
 
-                    <TextView
-                        android:id="@+id/tvBalanceInsufficientMessage"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin_8"
-                        android:gravity="end"
-                        android:includeFontPadding="false"
-                        android:paddingTop="@dimen/margin_8"
-                        android:text="@string/bet_info_bet_balance_insufficient"
-                        android:textColor="@color/color_E23434_E23434"
-                        android:textSize="@dimen/textSize12sp"
-                        android:visibility="gone"
-                        tools:visibility="visible" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/tvBalanceInsufficientMessage"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="@dimen/margin_8"-->
+<!--                        android:gravity="end"-->
+<!--                        android:includeFontPadding="false"-->
+<!--                        android:paddingTop="@dimen/margin_8"-->
+<!--                        android:text="@string/bet_info_bet_balance_insufficient"-->
+<!--                        android:textColor="@color/color_E23434_E23434"-->
+<!--                        android:textSize="@dimen/textSize12sp"-->
+<!--                        android:visibility="gone"-->
+<!--                        tools:visibility="visible" />-->
 
-                    <TextView
-                        android:id="@+id/tvErrorMessage"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin_8"
-                        android:gravity="end"
-                        android:includeFontPadding="false"
-                        android:paddingTop="@dimen/margin_8"
-                        android:text="@string/bet_info_list_minimum_limit_amount"
-                        android:textColor="@color/color_E23434_E23434"
-                        android:textSize="@dimen/textSize12sp"
-                        android:visibility="gone"
-                        tools:visibility="visible" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/tvErrorMessage"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="@dimen/margin_8"-->
+<!--                        android:gravity="end"-->
+<!--                        android:includeFontPadding="false"-->
+<!--                        android:paddingTop="@dimen/margin_8"-->
+<!--                        android:text="@string/bet_info_list_minimum_limit_amount"-->
+<!--                        android:textColor="@color/color_E23434_E23434"-->
+<!--                        android:textSize="@dimen/textSize12sp"-->
+<!--                        android:visibility="gone"-->
+<!--                        tools:visibility="visible" />-->
 
-                    <TextView
-                        android:id="@+id/tvPleaseEnterCorrectAmount"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin_8"
-                        android:gravity="end"
-                        android:includeFontPadding="false"
-                        android:paddingTop="@dimen/margin_8"
-                        android:text="@string/please_enter_correct_amount"
-                        android:textColor="@color/color_E23434_E23434"
-                        android:textSize="@dimen/textSize12sp"
-                        android:visibility="gone"
-                        tools:visibility="visible" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/tvPleaseEnterCorrectAmount"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginHorizontal="@dimen/margin_8"-->
+<!--                        android:gravity="end"-->
+<!--                        android:includeFontPadding="false"-->
+<!--                        android:paddingTop="@dimen/margin_8"-->
+<!--                        android:text="@string/please_enter_correct_amount"-->
+<!--                        android:textColor="@color/color_E23434_E23434"-->
+<!--                        android:textSize="@dimen/textSize12sp"-->
+<!--                        android:visibility="gone"-->
+<!--                        tools:visibility="visible" />-->
 
-                </LinearLayout>
+<!--                </LinearLayout>-->
 
                 <!--                &lt;!&ndash; 单关赔率变化提示框&ndash;&gt;-->
                 <!--                <include-->
@@ -377,17 +379,18 @@
                     <TextView
                         android:id="@+id/tv_no_parlay"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/bet_info_hint_view_height"
-                        android:background="@color/color_33FFAB2E"
+                        android:layout_height="wrap_content"
+                        android:background="#36DF9D9D"
+                        android:paddingVertical="3dp"
                         android:drawablePadding="@dimen/margin_6"
                         android:gravity="center_vertical"
                         android:paddingHorizontal="@dimen/margin_10"
-                        android:text="@string/bet_info_no_parlay_hint"
-                        android:textColor="@color/color_E38902"
+                        android:text="@string/bet_list_cant_parlay_warn"
+                        android:textColor="@color/color_E23434"
                         android:textSize="@dimen/textSize14sp"
                         android:visibility="gone"
                         app:drawableStartCompat="@drawable/ic_bet_lock_tip"
-                        app:drawableTint="@color/color_EBA900"
+                        app:drawableTint="@color/color_E23434"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:visibility="visible" />
 
@@ -395,16 +398,16 @@
                         android:id="@+id/tv_bet_lock"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/bet_info_hint_view_height"
-                        android:background="@color/color_996A7797"
+                        android:background="@color/color_DFE2E9"
                         android:drawablePadding="@dimen/margin_6"
                         android:gravity="center_vertical"
                         android:paddingHorizontal="@dimen/margin_10"
                         android:text="@string/bet_info_bet_lock_hint"
-                        android:textColor="@color/color_141931_F9F9F9"
+                        android:textColor="@color/color_5E6D78"
                         android:textSize="@dimen/textSize14sp"
                         android:visibility="gone"
                         app:drawableStartCompat="@drawable/ic_bet_lock_tip"
-                        app:drawableTint="@color/color_141931_F9F9F9"
+                        app:drawableTint="@color/color_5E6D78"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:visibility="gone" />
 
@@ -415,7 +418,7 @@
                         android:background="@drawable/bg_bet_hint_no_top_stroke"
                         android:visibility="gone"
                         app:layout_constraintTop_toTopOf="parent"
-                        tools:visibility="visible">
+                        tools:visibility="gone">
 
                         <TextView
                             android:id="@+id/tv_odd_content_changed"
