--- a/app/src/main/res/layout/bet_bar_layout.xml
+++ b/app/src/main/res/layout/bet_bar_layout.xml
@@ -14,7 +14,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginEnd="14dp"
-        android:src="@drawable/ic_arrow_up_double"
+        tools:src="@drawable/ic_arrow_up_double"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
