--- a/app/src/main/res/drawable/bg_linear_gradient_withe.xml
+++ b/app/src/main/res/drawable/bg_linear_gradient_withe.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/color_025BE8" />
+    <gradient
+        android:angle="0"
+        android:startColor="#EEF5FF"
+        android:endColor="@android:color/white"/>
 
-    <size
-        android:width="45dp"
-        android:height="2dp" />
 </shape>
