--- a/app/src/main/res/layout/item_sport_odd.xml
+++ b/app/src/main/res/layout/item_sport_odd.xml
@@ -13,6 +13,13 @@
         android:background="@color/color_E8EFFD"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginTop="0.5dp"
+        android:background="@drawable/bg_linear_gradient_withe"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <LinearLayout
         android:id="@+id/lin_match"
         android:layout_width="match_parent"
@@ -144,7 +151,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="44dp"
                     android:gravity="center_vertical"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_marginTop="@dimen/margin_4">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -170,7 +178,7 @@
                             android:gravity="center_vertical"
                             android:singleLine="true"
                             android:textColor="@color/color_535D76"
-                            android:textSize="@dimen/textSize14sp"
+                            android:textSize="@dimen/textSize12sp"
                             tools:text="俄罗斯" />
 
                         <TextView
@@ -222,7 +230,7 @@
                             android:fontFamily="@font/din_regular"
                             android:textColor="@color/color_414655"
                             android:textFontWeight="700"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/textSize14sp"
                             tools:text="0" />
                     </LinearLayout>
 
@@ -312,7 +320,7 @@
                             android:gravity="center_vertical"
                             android:singleLine="true"
                             android:textColor="@color/color_535D76"
-                            android:textSize="@dimen/textSize14sp"
+                            android:textSize="@dimen/textSize12sp"
                             tools:text="芬兰" />
 
                         <TextView
@@ -363,7 +371,7 @@
                             android:fontFamily="@font/din_regular"
                             android:textColor="@color/color_414655"
                             android:textFontWeight="700"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/textSize14sp"
                             tools:text="1" />
 
                     </LinearLayout>
@@ -427,6 +435,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="44dp"
+                    android:layout_marginTop="1dp"
                     android:gravity="center_vertical"
                     android:paddingLeft="12dp"
                     android:paddingRight="7dp">
@@ -598,7 +607,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/color_D3DEF5"
+        android:background="@color/color_D4E1F1"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <View
