--- a/app/src/main/res/layout/itemview_sport_type_v6.xml
+++ b/app/src/main/res/layout/itemview_sport_type_v6.xml
@@ -5,16 +5,16 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:minWidth="60dp"
-    android:layout_marginVertical="@dimen/margin_10"
-    android:paddingHorizontal="12dp"
+    android:paddingHorizontal="7.5dp"
     android:background="@color/color_141414_FCFCFC"
     tools:context=".ui.game.home.HomeGameCard"
     tools:ignore="SpUsage">
 
     <ImageView
         android:id="@+id/sport_type_img"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/margin_30"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginHorizontal="@dimen/margin_8"
         android:contentDescription="@null"
         android:src="@drawable/selector_sport_football"
         android:adjustViewBounds="true"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:text="@string/soccer"
         android:textColor="@color/color_select_blue_black"
-        android:textSize="@dimen/textSize12sp"
+        android:textSize="12sp"
         android:ellipsize="end"
         android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:maxLines="1"
         android:textColor="@color/color_select_blue_black"
         android:textSize="@dimen/textSize12sp"
-        android:fontFamily="@font/din_regular"
+        android:fontFamily="@font/din_bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sport_type_text"
