--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -422,6 +422,7 @@
     <color name="color_33131932">#33131932</color>
     <color name="color_00070707">#00070707</color>
     <color name="color_FF000000">#FF000000</color>
+    <color name="color_F7FAFE">#F7FAFE</color>
 
     <color name="color_E8EFFD">#E8EFFD</color>
     <color name="color_FFCC15">#FFCC15</color>
