--- a/app/src/main/res/layout/dialog_promotion_popup.xml
+++ b/app/src/main/res/layout/dialog_promotion_popup.xml
@@ -15,7 +15,7 @@
         <com.youth.banner.Banner
             android:id="@+id/banner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginBottom="12dp"
             app:banner_indicator_marginTop="5dp"
             app:banner_indicator_normal_color="@color/color_303030_dddddd"
