--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -199,7 +199,7 @@
                     android:paddingTop="9dp"
                     android:paddingBottom="9dp"
                     app:layout_constraintBottom_toTopOf="@id/llKeyboardContainer"
-                    tools:visibility="visible">
+                    tools:visibility="gone">
 
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guideline_input"
@@ -351,6 +351,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="1dp"
                     android:background="@color/color_F9F9F9"
+
                     app:layout_constraintBottom_toTopOf="@+id/bottomPaddingView">
 
                     <org.cxct.sportlottery.util.KeyboardView
@@ -360,7 +361,7 @@
                         android:layout_height="@dimen/keyboard_height"
                         android:layout_marginHorizontal="@dimen/margin_12"
                         android:visibility="gone"
-                        tools:visibility="visible" />
+                        tools:visibility="gone" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
 
@@ -392,7 +393,7 @@
                         app:drawableStartCompat="@drawable/ic_bet_lock_tip"
                         app:drawableTint="@color/color_E23434"
                         app:layout_constraintTop_toTopOf="parent"
-                        tools:visibility="visible" />
+                        tools:visibility="gone" />
 
                     <TextView
                         android:id="@+id/tv_bet_lock"
