--- a/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
@@ -100,7 +100,6 @@
                     android:textStyle="bold"
                     android:gravity="end|center_vertical"
                     android:scrollIndicators="end"
-                    app:layout_constraintBottom_toTopOf="@+id/ll_hint_container"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline_start"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -144,54 +143,55 @@
 <!--                    tools:text="26" />-->
 
                 <!--region 提示文字 -->
-                <LinearLayout
-                    android:id="@+id/ll_hint_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="18dp"
-                    app:layout_constraintBottom_toTopOf="@+id/layoutKeyBoard"
-                    app:layout_constraintTop_toBottomOf="@+id/et_bet_parlay"
-                    android:orientation="vertical">
+<!--                <LinearLayout-->
+<!--                    android:visibility="gone"-->
+<!--                    android:id="@+id/ll_hint_container"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginHorizontal="18dp"-->
+<!--                    app:layout_constraintBottom_toTopOf="@+id/layoutKeyBoard"-->
+<!--                    app:layout_constraintTop_toBottomOf="@+id/et_bet_parlay"-->
+<!--                    android:orientation="vertical">-->
 
-                    <TextView
-                        android:id="@+id/tvBalanceInsufficientMessageParlay"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="end"
-                        android:includeFontPadding="false"
-                        android:paddingTop="@dimen/margin_8"
-                        android:text="@string/bet_info_bet_balance_insufficient"
-                        android:textColor="@color/color_E23434_E23434"
-                        android:textSize="@dimen/textSize12sp"
-                        android:visibility="gone"
-                        tools:visibility="visible" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/tvBalanceInsufficientMessageParlay"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:gravity="end"-->
+<!--                        android:includeFontPadding="false"-->
+<!--                        android:paddingTop="@dimen/margin_8"-->
+<!--                        android:text="@string/bet_info_bet_balance_insufficient"-->
+<!--                        android:textColor="@color/color_E23434_E23434"-->
+<!--                        android:textSize="@dimen/textSize12sp"-->
+<!--                        android:visibility="gone"-->
+<!--                        tools:visibility="visible" />-->
 
-                    <TextView
-                        android:id="@+id/tvErrorMessageParlay"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="end"
-                        android:includeFontPadding="false"
-                        android:paddingTop="@dimen/margin_8"
-                        android:text="@string/bet_info_list_minimum_limit_amount"
-                        android:textColor="@color/color_E23434_E23434"
-                        android:textSize="@dimen/textSize12sp"
-                        android:visibility="gone"
-                        tools:visibility="visible" />
+<!--                    <TextView-->
+<!--                        android:id="@+id/tvErrorMessageParlay"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:gravity="end"-->
+<!--                        android:includeFontPadding="false"-->
+<!--                        android:paddingTop="@dimen/margin_8"-->
+<!--                        android:text="@string/bet_info_list_minimum_limit_amount"-->
+<!--                        android:textColor="@color/color_E23434_E23434"-->
+<!--                        android:textSize="@dimen/textSize12sp"-->
+<!--                        android:visibility="gone"-->
+<!--                        tools:visibility="visible" />-->
 
-                    <TextView
-                        android:id="@+id/tvPleaseEnterCorrectAmountParlay"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="end"
-                        android:includeFontPadding="false"
-                        android:paddingTop="@dimen/margin_8"
-                        android:text="@string/please_enter_correct_amount"
-                        android:textColor="@color/color_E23434_E23434"
-                        android:textSize="@dimen/textSize12sp"
-                        android:visibility="gone"
-                        tools:visibility="visible" />
-                </LinearLayout>
+<!--                    <TextView-->
+<!--                        android:id="@+id/tvPleaseEnterCorrectAmountParlay"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:gravity="end"-->
+<!--                        android:includeFontPadding="false"-->
+<!--                        android:paddingTop="@dimen/margin_8"-->
+<!--                        android:text="@string/please_enter_correct_amount"-->
+<!--                        android:textColor="@color/color_E23434_E23434"-->
+<!--                        android:textSize="@dimen/textSize12sp"-->
+<!--                        android:visibility="gone"-->
+<!--                        tools:visibility="visible" />-->
+<!--                </LinearLayout>-->
                 <!--endregion 提示文字 -->
 
                 <org.cxct.sportlottery.util.KeyboardView
@@ -201,6 +201,7 @@
                     android:layout_marginHorizontal="@dimen/margin_18"
                     android:paddingTop="@dimen/margin_15"
                     android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@+id/et_bet_parlay"
                     app:layout_constraintBottom_toBottomOf="parent"
                     tools:visibility="visible" />
 
