--- a/app/src/main/res/layout/item_parlay_receipt.xml
+++ b/app/src/main/res/layout/item_parlay_receipt.xml
@@ -18,6 +18,7 @@
 
         <FrameLayout
             android:id="@+id/flBetOrder"
+             android:background="@drawable/bg_parlay_bet_sucessful"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingVertical="9dp"
@@ -70,14 +71,15 @@
                     android:id="@+id/tv_winnable_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/din_regular"
                     android:gravity="end"
                     android:textColor="@color/color_DB6372"
                     android:textSize="@dimen/textSize12sp"
                     android:textStyle="bold"
-                    android:layout_marginTop="4dp"
-                    android:fontFamily="@font/din_regular"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_winnable_amount_title"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_winnable_amount_title"
                     app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/tv_winnable_amount_title"
+                    app:layout_constraintTop_toTopOf="@+id/tv_winnable_amount_title"
                     tools:text="43.00" />
 
                 <TextView
@@ -108,22 +110,22 @@
                     android:text="@string/bet_receipt_bet_quota_with_sign"
                     android:textColor="@color/color_9BB3D9_535D76"
                     android:textSize="@dimen/textSize12sp"
-                    android:layout_marginTop="7dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvBetResutStatu" />
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_bet_amount"
+                    app:layout_constraintEnd_toStartOf="@+id/tv_bet_amount"
+                    app:layout_constraintTop_toTopOf="@+id/tv_bet_amount" />
 
                 <TextView
                     android:id="@+id/tv_bet_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="@font/din_regular"
                     android:gravity="start"
                     android:textColor="@color/color_414655"
                     android:textSize="@dimen/textSize12sp"
                     android:textStyle="bold"
-                    android:layout_marginTop="4dp"
-                    android:fontFamily="@font/din_regular"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_bet_amount_title"
                     app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvBetResutStatu"
                     tools:text="50.00" />
 
                 <TextView
